# vocableTrainer

./: CMakeLists.txt  Info.h  Lect2Parser.h  MyTableModel.h  MyTableModel.tcc  MyTableView.h  MyTableView.tcc  Optional.h  Trainer.cpp  Trainer.h  Vocable.h  VocableList.cpp  VocableList.h  VocableTrainer.cpp  VocableTrainer.h  lect2-pskel.cxx  lect2-pskel.hxx  lect2.dtd  lect2.xsd  main.cpp  makeIcons.sh  parsingEntities.h  stringUtils.h  vegetables.l2  vocableTrainer.icns
